--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,35 +14,27 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Button
+        <ImageButton
             android:id="@+id/btnRock"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="onClickRock"
-            android:text="グー"
-            android:textSize="35sp" />
-
-        <Button
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/janken_gu_160x160" />
+        <ImageButton
             android:id="@+id/btnScissors"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="onClickScissors"
-            android:text="チョキ"
-            android:textSize="35sp" />
-
-        <Button
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/janken_choki_160x160" />
+        <ImageButton
             android:id="@+id/btnPaper"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_margin="5dp"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="onClickPaper"
-            android:text="パー"
-            android:textSize="35sp" />
+            android:scaleType="centerInside"
+            app:srcCompat="@drawable/janken_pa_160x160" />
     </LinearLayout>
     <TextView
         android:id="@+id/judge"
